# shogi-llm

./: .gitignore  LICENSE  README.md  pyproject.toml  usi.sh
config/: qwen3-0.6b-t16-winner-tiny.yaml  qwen3-0.6b-t64-winner-tiny.yaml  qwen3-0.6b-t64-winner.yaml
src/shogi_llm/: __init__.py  evaluate_model_v1.py  floodgate_extract_v1.py  generate_dataset_v1.py  predict_engine.py  train_v1.py  usi_engine_v1.py
usi_config/: v1.yaml
